INT-3298: Fixing print/get_string calls

--- a/prune.html
+++ b/prune.html
@@ -1,7 +1,7 @@
 <form id="pruneform" method="get" action="post.php">
 <table border="0" cellpadding="5">
 <tr valign="top">
-    <td align="right"><b><?php print_string("discussionname", "forum"); ?>:</b></td>
+    <td align="right"><b><?php print_string("discussionname", "hsuforum"); ?>:</b></td>
     <td>
         <input type="text" name="name" size="60" value="<?php p($post->subject) ?>" />
     </td>
@@ -12,7 +12,7 @@
     <input type="hidden" name="prune"   value="<?php p($prune) ?>" />
     <input type="hidden" name="confirm" value="<?php p($prune) ?>" />
     <input type="hidden" name="sesskey" value="<?php echo sesskey() ?>" />
-    <input type="submit" value="<?php print_string('prune', 'forum'); ?>" />
+    <input type="submit" value="<?php print_string('prune', 'hsuforum'); ?>" />
     </td>
 </tr>
 </table>
