--- a/prune.html
+++ b/prune.html
@@ -1,19 +1,9 @@
 <form id="pruneform" method="get" action="post.php">
-<table border="0" cellpadding="5">
-<tr valign="top">
-    <td align="right"><b><?php print_string("discussionname", "hsuforum"); ?>:</b></td>
-    <td>
-        <input type="text" name="name" size="60" value="<?php p($post->subject) ?>" />
-    </td>
-</tr>
 
-<tr>
-    <td align="center" colspan="2">
-    <input type="hidden" name="prune"   value="<?php p($prune) ?>" />
-    <input type="hidden" name="confirm" value="<?php p($prune) ?>" />
-    <input type="hidden" name="sesskey" value="<?php echo sesskey() ?>" />
-    <input type="submit" value="<?php print_string('prune', 'hsuforum'); ?>" />
-    </td>
-</tr>
-</table>
+<label for=prunename><?php print_string("discussionname", "hsuforum"); ?></label>
+<input type="text" id=prunename name="name" value="<?php p($post->subject) ?>" />
+<input type="hidden" name="prune"   value="<?php p($prune) ?>" />
+<input type="hidden" name="confirm" value="<?php p($prune) ?>" />
+<input type="hidden" name="sesskey" value="<?php echo sesskey() ?>" />
+<input type="submit" value="<?php print_string('prune', 'hsuforum'); ?>" />
 </form>
